@@ -56,3 +56,6 @@
 0.1.4
 - fixing more issues with itemshadowfixes not cleaning block entities properly
 - fixed shulker boxes not being serialized correctly
+- fixed block entities not being saved correctly
+- implemented check for entities going through nether portals for shadow items (NOT PLAYERS)
+
